<resources>
    <string name="app_name">Canteenapp</string>
    <string name="title_home">Breakfast Menu</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="info">Information</string>
    <string name="scheduled">Scheduled</string>
</resources>
